Added first slide

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+				<!--Slide 1-->
+				<section>
+				    <img src="https://d3hw41hpah8tvx.cloudfront.net/images/logo_olist_d7309b5f20.png" alt="reveal.js logo" style="height: 180px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
+				    <h3 class="title">Análise da base de clientes Olist</h3>
+					<h7>Projeto integrador - 3° Trimestre</h7>
+				    <small><br>André Dambry, Arnaldo Chebl, Giovanna Mendes, Isabella Gobbi, Tiago Pardo</small>
+	
+				</section>
 				<section>Slide 2</section>
 			</div>
 		</div>
