--- a/index.html
+++ b/index.html
@@ -18,13 +18,23 @@
 			<div class="slides">
 				<!--Slide 1-->
 				<section>
-				    <img src="https://d3hw41hpah8tvx.cloudfront.net/images/logo_olist_d7309b5f20.png" alt="reveal.js logo" style="height: 180px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
+				    <img src="https://d3hw41hpah8tvx.cloudfront.net/images/logo_olist_d7309b5f20.png" alt="reveal.js logo" style="height: 200px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
 				    <h3 class="title">Análise da base de clientes Olist</h3>
 					<h7>Projeto integrador - 3° Trimestre</h7>
 				    <small><br>André Dambry, Arnaldo Chebl, Giovanna Mendes, Isabella Gobbi, Tiago Pardo</small>
-	
 				</section>
-				<section>Slide 2</section>
+				<!--Slide 2-->
+				<section>
+					<div class="content">
+						<h3>Objetivos do projeto</h3>
+						<ul>
+							<li>Explorar a base de clientes da olist e encontrar padrões significativos</li>
+							<li>Desenhar a persona de acordo com o cluster escolhido e seus respectivos padrões</li>
+							<li>Identificar as dores da persona à partir de seus dados</li>
+							<li>Definir próximos passos para a olist e “How might we?”</li>
+						</ul>
+					</div>
+				</section>
 			</div>
 		</div>
 
