--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
 						</ul>
 					</div>
 				</section>
+				<!--Slide 3-->
+				<section>
+					<div class="content">
+						<h3>Agenda</h3>
+						<ul>
+							<li>Análise exploratória</li>
+							<li>Definição do Cluster</li>
+						</ul>
+					</div>
+				</section>
 			</div>
 		</div>
 
