--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
 						</ul>
 					</div>
 				</section>
+				<!--Slide 4-->
+				<section>
+					<div class="content">
+						<h3>Utilizando o método do cotovelo, é possivel observar que o número ótimo de clusters seria 12</h3>
+						<ul>
+							<li>Para auxiliar no entendimento da base de clientes, é feita uma segmentação dos clientes com clusterização</li>
+							<li>A clusterização foi feita pelo algoritmo de Machine Learning K-prototypes</li>
+						    <li>O método do cotovelo é uma visualização que permite definir o número ótimo de clusters</li>
+					    </ul>
+					</div>
+				</section>
 			</div>
 		</div>
 
