created new css file and diplayed images side by side

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 						    <li>O método do cotovelo é uma visualização que permite definir o número ótimo de clusters</li>
 					    </ul>
 					</div>
+					<div class="image-container">
+						<img src="https://d3hw41hpah8tvx.cloudfront.net/images/logo_olist_d7309b5f20.png" alt="reveal.js logo" style="height: 200px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
+						<img src="https://d3hw41hpah8tvx.cloudfront.net/images/logo_olist_d7309b5f20.png" alt="reveal.js logo" style="height: 200px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
+					</div>
 				</section>
 			</div>
 		</div>
