added new css file and diplayed images side by side

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
 		<link rel="stylesheet" href="dist/theme/black.css">
+		<link rel="stylesheet" href="dist/theme/style.css">
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
@@ -48,16 +49,24 @@
 				<!--Slide 4-->
 				<section>
 					<div class="content">
-						<h3>Utilizando o método do cotovelo, é possivel observar que o número ótimo de clusters seria 12</h3>
+						<h3 style="color:blue;text-align:left;">Utilizando o método do cotovelo, é possivel observar que o número ótimo de clusters seria 12</h3>
 						<ul>
 							<li>Para auxiliar no entendimento da base de clientes, é feita uma segmentação dos clientes com clusterização</li>
 							<li>A clusterização foi feita pelo algoritmo de Machine Learning K-prototypes</li>
 						    <li>O método do cotovelo é uma visualização que permite definir o número ótimo de clusters</li>
 					    </ul>
 					</div>
+				</section>
+				<!--Slide 5-->
+				<section>
+					<div class="content">
+						<h6>A categoria casa conforto é a mais comprada da Olist, além de trazer mais valor agregado</h6>
+					    <p>&nbsp;</p>
+
+					</div>
 					<div class="image-container">
-						<img src="https://d3hw41hpah8tvx.cloudfront.net/images/logo_olist_d7309b5f20.png" alt="reveal.js logo" style="height: 200px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
-						<img src="https://d3hw41hpah8tvx.cloudfront.net/images/logo_olist_d7309b5f20.png" alt="reveal.js logo" style="height: 200px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
+						<img src="images/top5_categories_cluster.png" alt="Top5_categories" style="width:40%">
+					    <img src="images/valor_agregado_categoria.png" alt="aggregated_value_categories" style="width:40%">
 					</div>
 				</section>
 			</div>
