--- a/index.html
+++ b/index.html
@@ -20,12 +20,22 @@
 				gap: 1rem;
 			}
 
-			.image-bulletpoint-container img {
-				width: 20%;}
 
 			.image-bulletpoint-container ul li {
 				font-size: 24px;} /* Define o tamanho da fonte dos bullet points */
-			
+
+			.image-container {
+				display: flex;
+				justify-content: space-between;
+			}
+
+			.image-container img {
+				flex: 1;
+				max-width: 100%;
+				height: auto;
+				margin-right: 20px;
+			}
+		
 		</style>
 
 	</head>
@@ -66,36 +76,38 @@
 				<!--Slide 5-->
 				<section>
 					<div class="content">
-						<h3 class="title">Utilizando o método do cotovelo, é possivel observar que o número ótimo de clusters seria 12</h3>
-						<ul>
-							<li>Para auxiliar no entendimento da base de clientes, é feita uma segmentação dos clientes com clusterização</li>
-							<li>A clusterização foi feita pelo algoritmo de Machine Learning K-prototypes</li>
-						    <li>O método do cotovelo é uma visualização que permite definir o número ótimo de clusters</li>
-					    </ul>
+						<h9 class="title">Utilizando o método do cotovelo, é possivel observar que o número ótimo de clusters seria 12</h9>
+						<div class="image-bulletpoint-container">
+							<ul>
+								<li>Para auxiliar no entendimento da base de clientes, é feita uma segmentação dos clientes com clusterização</li>
+								<li>A clusterização foi feita pelo algoritmo de Machine Learning K-prototypes</li>
+								<li>O método do cotovelo é uma visualização que permite definir o número ótimo de clusters</li>
+							</ul>
+							<img src="images/cotovelo.jpg" alt="Gráfico do método do cotovelo" width="60%">
+						</div>
 					</div>
 				</section>
 				<!--Slide 6-->
 				<section>
 					<div class="content">
-						<h6 class="title">Os clientes são concentrados na região sudeste, tendo uma participação considerável nos clusters</h6>
+						<h9 class="title">Os clientes são concentrados na região sudeste, tendo uma participação considerável nos clusters</h9>
 					    <p>&nbsp;</p>
 
 					</div>
 					<div class="image-container">
-						<img src="images/top5_categories_cluster.png" alt="Top5_categories" style="width:40%">
-					    <img src="images/valor_agregado_categoria.png" alt="aggregated_value_categories" style="width:40%">
+						<img src="images/top5_categories_cluster.png" alt="Top5_categories" style="width:50%">
+					    <img src="images/valor_agregado_categoria.png" alt="aggregated_value_categories" style="width:50%">
 					</div>
 				</section>
 				<!--Slide 7-->
 				<section>
 					<div class="content">
-						<h6 class="title">A categoria casa conforto é a mais comprada da Olist, além de trazer mais valor agregado</h6>
+						<h9 class="title">A categoria casa conforto é a mais comprada da Olist, além de trazer mais valor agregado</h9>
 					    <p>&nbsp;</p>
-
 					</div>
 					<div class="image-container">
-						<img src="images/top5_categories_cluster.png" alt="Top5_categories" style="width:40%">
-					    <img src="images/valor_agregado_categoria.png" alt="aggregated_value_categories" style="width:40%">
+						<img src="images/top5_categories_cluster.png" alt="Top5_categories" style="width:50%">
+					    <img src="images/valor_agregado_categoria.png" alt="aggregated_value_categories" style="width:50%">
 					</div>
 				</section>
 				<!--Slide 8-->
