Added more slides

--- a/index.html
+++ b/index.html
@@ -70,6 +70,24 @@
 						<ul>
 							<li>Análise exploratória</li>
 							<li>Definição do Cluster</li>
+							<li>Construção da persona</li>
+							<li>"How might we?"</li>
+							<li>Desenvolvimento da solução</li>
+							<li>Conclusão</li>
+						</ul>
+					</div>
+				</section>
+				<!--Slide 4-->
+				<section>
+					<div class="content">
+						<h3 class="title">Agenda</h3>
+						<ul>
+							<li style = "font-weight: bold; color:#0a1f9c;">Análise exploratória</li>
+							<li>Definição do Cluster</li>
+							<li>Construção da persona</li>
+							<li>"How might we?"</li>
+							<li>Desenvolvimento da solução</li>
+							<li>Conclusão</li>
 						</ul>
 					</div>
 				</section>
@@ -113,16 +131,26 @@
 				<!--Slide 8-->
 				<section>
 					<div class="content">
-						<h6 class="title">O cluster 8 e 11 também apresentam maior ticket médio e contém avaliações mistas</h6>
+						<h9 class="title">O cluster 8 e 11 também apresentam maior ticket médio e contém avaliações mistas</h9>
 						<small>Ticket médio de cada perfil de cliente (escala logarítmica)</small>
-					    <p>&nbsp;</p>
-
 					</div>
-					<div class="image-container">
-					    <img src="images/valor_agregado_categoria.png" alt="aggregated_value_categories" style="width:40%">
-					</div>
+					<img src="images/ticket_medio_cliente.png" alt="Gráfico ticket médio do perfil do cliente" style="width:65%">
 				</section>
 				<!--Slide 9-->
+				<section>
+					<div class="content">
+						<h3 class="title">Agenda</h3>
+						<ul>
+							<li>Análise exploratória</li>
+							<li style = "font-weight: bold; color:#0a1f9c;">Definição do Cluster</li>
+							<li>Construção da persona</li>
+							<li>"How might we?"</li>
+							<li>Desenvolvimento da solução</li>
+							<li>Conclusão</li>
+						</ul>
+					</div>
+				</section>
+				<!--Slide 10-->
 				<section>
 					<div class="content">
 						<h9 class="title">O cluster 11 apresenta características interessantes para a construção de uma persona</h9>
@@ -132,6 +160,15 @@
 					<img src="images/cluster11.jpg" alt="aggregated_value_categories">
 				</section>
 				<!--Slide 11-->
+				<section>
+					<div class="content">
+						<h9 class="title">São Paulo capital demonstra um crescimento considerável nos últimos anos, assim como empregos ofertados na cidade</h9>
+					</div>
+					<img src="images/sp_news1.png" alt="Notícias SP" style="width:40%">
+					<img src="images/sp_news2.png" alt="Notícias SP" style="width:60%">
+					<img src="images/sp_news3.png" alt="Notícias SP" style="width:40%">
+				</section>
+				<!--Slide 12-->
 				<section>
 					<div class="content">
 						<h9 class="title">A base de clientes do cluster 11 se concentra na região Sudeste, principalmente em São Paulo</h9>
