added more slides

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 				height: auto;
 				margin-right: 20px;
 			}
+			.text-boxes {
+				display: flex;
+				justify-content: space-between;
+				margin-top: 7rem;
+				background-color: #f3f3fc;
+			}
 		
 		</style>
 
@@ -176,7 +182,7 @@
 					</div>
 					<img src="images/heatmap_brasil.png" alt="Densidade de clientes por região" style="width:50%">
 				</section>
-				<!--Slide 12-->
+				<!--Slide 13-->
 				<section>
 					<div class="content">
 						<h9 class="title">A subcategoria de produtos com maior valor agregado do cluster 11 são móveis de escritório</h9>
@@ -184,7 +190,21 @@
 					</div>
 					<img src="images/valor_agregado_subcategoria_casa_conforto.png" alt="Densidade de clientes por região" style="width:100%">
 				</section>
-				<!--Slide 13-->
+				<!--Slide 14-->
+				<section>
+					<div class="content">
+						<h3 class="title">Agenda</h3>
+						<ul>
+							<li>Análise exploratória</li>
+							<li>Definição do Cluster</li>
+							<li style = "font-weight: bold; color:#0a1f9c;">Construção da persona</li>
+							<li>"How might we?"</li>
+							<li>Desenvolvimento da solução</li>
+							<li>Conclusão</li>
+						</ul>
+					</div>
+				</section>
+				<!--Slide 15-->
 				<section>
 					<div class="content">
 						<h3 class="title">Persona</h3>
@@ -202,8 +222,229 @@
 						</div>
 					</div>
 				</section>
+				<!--Slide 16-->
+				<section>
+					<div class="content">
+						<h9 class="title">Os clientes como a Clara prezam pela pontualidade e a facilidade de ter o item montado em suas casas</h9>
+					    <small>word cloud de avaliações negativas x positivas</small>
+					</div>
+					<div class="image-container">
+						<img src="images/avaliacoes_ruins.png" alt="Avaliações ruins" style="width:40%">
+					    <img src="images/avaliacoes_boas.png" alt="Avaliações boas" style="width:40%">
 					</div>
 				</section>
+				<!--Slide 17-->
+				<section>
+					<div class="content">
+						<h3 class="title">Agenda</h3>
+						<ul>
+							<li>Análise exploratória</li>
+							<li>Definição do Cluster</li>
+							<li>Construção da persona</li>
+							<li style = "font-weight: bold; color:#0a1f9c;">"How might we?"</li>
+							<li>Desenvolvimento da solução</li>
+							<li>Conclusão</li>
+						</ul>
+					</div>
+				</section>
+				<!--Slide 18-->
+				<section>
+					<img src="images/timer.svg" alt="Avaliações ruins" style="width:40%">
+					<div class="content">
+						<h9 class="title">Como podemos garantir que a Clara receba os produtos antes do prazo, sem avarias e com uma boa montagem?</h9>
+					</div>
+				</section>
+				<!--Slide 19-->
+				<section>
+					<div class="content">
+						<h9 class="title">Foram definidos 3 pilares para o desenvolvimento da solução, que se relacionam com as necessidades de Clara</h9>		
+		
+						<div class="text-boxes">
+							<div class="text-box">
+								<p>Prazo</p>
+								<small>23 soluções relacionadas</small>
+							</div>
+							<div class="text-box">
+								<p>Qualidade</p>
+                                <small>16 soluções relacionadas</small>
+							</div>
+							<div class="text-box">
+								<p>Montagem</p>
+								<small>18 soluções relacionadas</small>
+							</div>
+							
+							<div class="text-box" style="background-color: #0a1f9c; color: white; ">
+								<p>13 soluções priorizadas</p>
+								<small>57 soluções criadas</small>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!--Slide 20-->
+				<section>
+					<div class="content">
+						<h9 class="title">A solução que apresenta menor esforço e maior impacto para a Clara envolve a valorização do vendedor</h9>
+					</div>
+					<img src="images/solucoes.png" alt="Soluções para o problema" style="width:100%">
+				</section>
+				<!--Slide 21-->
+				<section>
+					<div class="content">
+						<h3 class="title">Agenda</h3>
+						<ul>
+							<li>Análise exploratória</li>
+							<li>Definição do Cluster</li>
+							<li>Construção da persona</li>
+							<li>"How might we?"</li>
+							<li style = "font-weight: bold; color:#0a1f9c;">Desenvolvimento da solução</li>
+							<li>Conclusão</li>
+						</ul>
+					</div>
+				</section>
+				<!--Slide 22-->
+				<section>
+					<div class="content">
+						<section>
+							<div class="content"></div>
+						<h9 class="title" style = "font-size: 23px;">Grandes empresas e startups desenvolveram soluções similares e apresentaram resultados positivos</h9>		
+						<div class="text-boxes" style="font-size:medium; margin-top: 1rem; width: 1000px;background-color: #ffffff;">
+							<div class="text-box">
+								<img src="images/logo-mercadolivre.png" alt="Logo Mercado Livre" style="width:50%;">
+								<img src="images/plano_mercadolivre.png" alt="Plano Mercado Livre" style="width:100%; height: 55%;">
+								<p>Mercado Líder</p>
+								<ul>
+									<li>Prioridade nos anúncios</li>
+									<li>Atendimento personalizado</li>
+									<li>Benefícios aos clientes</li>
+								</ul>
+							</div>
+							<div class="text-box">
+								<img src="images/logo-amazon.svg" alt="Logo Amazon" style="width:30%">
+								<img src="images/plano-amazon.png" alt="Plano Amazon" style="width:80%;height:55%">
+								<p>Seller Central</p>
+                                <ul>
+									<li>Conteúdos exclusivos</li>
+									<li>Dados de vendas</li>
+									<li>Treinamentos de vendas</li>
+								</ul>
+							</div>
+							<div class="text-box">
+								<img src="images/logo-ifood.png" alt="Logo Ifood" style="width:20%">
+								<img src="images/plano-ifood.png" alt="Plano Ifood" style="width:100%;height: 55%;">
+								<p>Super-Restaurante</p>
+								<ul>
+									<li>Maior visibilidade</li>
+									<li>Oferecimento de cupons para clientes</li>
+									<li>Programa de pontos</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!--Slide 23-->
+				<section>
+					<div class="content">
+						<h9 class="title" style = "font-size: 30px;">Baseado em suposições de contratação de planos, foi realizado um novo modelo de precificação para adequar os descontos progressivos</h9>
+					</div>
+					<div class="image-container">
+						<img src="images/plano-evoluir.png" alt="Plano Evoluir" style="width:50%;">
+					    <img src="images/modelo-novo-sugerido.png" alt="Modelo sugerido" style="width:50%;">
+					</div>
+				</section>
+				<!--Slide 24-->
+				<section>
+					<div class="content">
+						<h9 class="title" style = "font-size: 30px;">Os vendedores devem ter requisitos mínimos para serem elegíveis para o ranking</h9>
+					</div>
+					<div class="image-container">
+						<img src="images/filtros-realizados.png" alt="Filtragem de vendedores" style="width:50%;">
+					    <img src="images/vendedores-elegiveis-grafico.png" alt="Gráfico de eligibilidade" style="width:50%;">
+					</div>
+				</section>
+				<!--Slide 25-->
+				<section>
+					<div class="content">
+						<h9 class="title">Mais de 70% dos vendedores da Olist vão receber um dashboard exclusivo para impulsionar suas vendas</h9>
+						<p></p>
+						<small>Valores de vendas no trimestre</small>
+						<p></p>
+						<small style="font-size: small;">% do total de vendas</small>
+						<img src="images/vendas-no-trimestre.png" alt="Vendas no trimestre" style="width:100%;">
+					</div>
+				</section>
+				<!--Slide 26-->
+				<section>
+					<div class="content">
+						<h9 class="title">O aumento no faturamento fixo irá equilibrar os benefícios ofertados nos diferentes planos</h9>
+						<p></p>
+						<small>Faturamento em reais (R$) antes e depois das mudanças</small>
+						<img src="images/faturamento_apos.jpg" alt="Faturamento antes e depois das mudanças" style="width:70%;">
+					</div>
+				</section>
+				<!--Slide 27-->
+				<section>
+					<div class="content">
+						<h3 class="title">Agenda</h3>
+						<ul>
+							<li>Análise exploratória</li>
+							<li>Definição do Cluster</li>
+							<li>Construção da persona</li>
+							<li>"How might we?"</li>
+							<li>Desenvolvimento da solução</li>
+							<li style = "font-weight: bold; color:#0a1f9c;">Conclusão</li>
+						</ul>
+					</div>
+				</section>
+				<!--Slide 28-->
+				<section>
+					<div class="content">
+						<section>
+							<div class="content"></div>
+						<h9 class="title" style = "font-size: 23px;">A solução pensada tem o potencial de agradar tanto o vendedor quanto o cliente final</h9>		
+						<div class="text-boxes" style="font-size:medium; margin-top: 1rem; width: 1000px;background-color: #ffffff;">
+							<div class="text-box" style = "font-size: 23px;">
+								<img src="images/vendedor.png" alt="Logo vendedor" style="width:50%;">
+								<ul>
+									<li>Incentivos financeiros</li>
+									<li>visibilidade sobre seu negócio/produto</li>
+									<li>Identificação de pontos de melhoria</li>
+								</ul>
+								<p>&nbsp;</p>
+								<p>&nbsp;</p>
+								<img src="images/vendedor-motivado.png" alt="Vendedor motivado">
+							</div>
+							<div class="text-box" style = "font-size: 23px;">
+								<img src="images/clara-logo.png" alt="Logo Clara" style="width:45%">
+                                <ul>
+									<li>Produto de melhor qualidade</li>
+									<li>Rapidez na entrega</li>
+									<li>Visibilidade sobre o valor agregado</li>
+									<li>Possível melhoria no preço</li>
+								</ul>
+								<p>&nbsp;</p>
+								<p>&nbsp;</p>
+								<img src="images/cliente-satisfeito.png" alt="Cliente Satisfeito">
+							</div>
+							<div class="text-box" style = "font-size: 23px;">
+								<img src="images/logo-olist.png" alt="Logo Olist" style="width:42%">
+								<ul>
+									<li>Melhores avaliações no marketplace</li>
+									<li>Maior poder de barganha</li>
+									<li>Vendedores estimulados a vender mais na Olist</li>
+									<li>Aumento de margem (por conta do aumento de vendas)</li>
+								</ul>
+								<p>&nbsp;</p>
+								<p>&nbsp;</p>
+								<img src="images/melhoria-reputacao.png" alt="Melhoria na reputação" style="width:80%">
+							</div>
+						</div>
+					</div>
+				</section>
+				
+
+					</div>
+				</section>
+				<img src="https://d3hw41hpah8tvx.cloudfront.net/images/logo_olist_d7309b5f20.png" alt="Olist logo" style="height: 70px; margin: 0 auto 4rem auto; background: transparent;" class="olist-logo">
 			</div>
 		</div>
 
